--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,7 @@ on: [pull_request, push]
 
 jobs:
   continous-integration:
-    runs_on: ubuntu_latest
+    runs-on: ubuntu_latest
 
     steps:
       - uses: actions/checkout@v4
@@ -13,10 +13,10 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build
-        run: docker build ./build/package/Dockerfile
+        run: docker build -f ./build/package/Dockerfile .
   
   deploy:
-    runs_on: ubuntu_latest
+    runs-on: ubuntu_latest
     if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main'
     needs: [continous-integration]
     steps:
