feature: adds UploadToS3Bucket function

--- a/.env-EXAMPLE
+++ b/.env-EXAMPLE
@@ -1,2 +1,5 @@
 SISCONF_SPRING_BACKEND_URL=http://localhost:8080
 RABBIT_MQ_ORDERS_GROUP_SHEET_QUEUE_NAME=queue_name
+AMAZON_S3_BUCKET_REGION=aws-region
+AMAZON_S3_ACCESS_KEY_ID=access-key-id
+AMAZON_S3_SECRET_ACCESS_KEY=secret-access-key
