--- a/.env-EXAMPLE
+++ b/.env-EXAMPLE
@@ -1,5 +1,9 @@
 SISCONF_SPRING_BACKEND_URL=http://localhost:8080
+SISCONF_MS_USER_EMAIL=example@email.com
+SISCONF_MS_USER_PASSWORD=password
 RABBIT_MQ_ORDERS_GROUP_SHEET_QUEUE_NAME=queue_name
-AMAZON_S3_BUCKET_REGION=aws-region
-AMAZON_S3_ACCESS_KEY_ID=access-key-id
-AMAZON_S3_SECRET_ACCESS_KEY=secret-access-key
+RABBIT_MQ_HOSTNAME=amqp://guest:guest@localhost:5672/
+AMAZON_S3_BUCKET_NAME=bucket-name
+AMAZON_S3_BUCKET_REGION=bucket-region
+AWS_ACCESS_KEY_ID=access-key-id
+AWS_SECRET_ACCESS_KEY=secret-access-key
