--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
           USER: ${{ secrets.EC2_USER }}
         run: |
           echo "$PRIVATE_KEY" > sisconf-go-microservice.pem && chmod 600 sisconf-go-microservice.pem
-          ssh -o StrictHostKeyChecking=no -i sisconf-go-microservice.pem ${USER}@${HOST} << 'EOF'
+          ssh -v -o StrictHostKeyChecking=no -i sisconf-go-microservice.pem ${USER}@${HOST} << 'EOF'
           BRANCH=${{ github.ref_name }}
 
           if [ -d "sisconf-orders-group-ms" ]; then
